# diamond

./: .astylerc  .gitignore  CMakeLists.txt  Diamond.config  Diamond.creator.user.2.6pre1  Diamond.files  Diamond.includes  Diamond.pri  README.md  Singleton-Application-Notes.txt  about.cpp  about.h  advanced_find.cpp  astyle-diamond.sh  barb.json  build-diamond-deb.sh  build-diamond-rpm.sh  changelog  config.status  configure.ac  description.txt  dialog_advfind.cpp  dialog_advfind.h  dialog_buffer.cpp  dialog_buffer.h  dialog_colors.cpp  dialog_colors.h  dialog_colors.ui  dialog_config.cpp  dialog_config.h  dialog_find.cpp  dialog_find.h  dialog_find.ui  dialog_fonts.cpp  dialog_fonts.h  dialog_get1.cpp  dialog_get1.h  dialog_getline.cpp  dialog_getline.h  dialog_macro.cpp  (+61 more)
deb_build.etc/: control.in  postinst.in  postrm.in
dev_doc/: Getting-Started.rtf  Rules-and-Goals.rtf
dictionary/: userDict.txt
doxy/: Doxyfile-Diamond  install.dox  menus.dox  notes.dox  welcome.dox
forms/: dialog_advfind.ui  dialog_buffer.ui  dialog_busy.ui  dialog_colors.ui  dialog_config.ui  dialog_edt_help.ui  dialog_find.ui  dialog_fonts.ui  dialog_get1.ui  dialog_getline.ui  dialog_macro.ui  dialog_open.ui  dialog_options.ui  dialog_preset.ui  dialog_print_opt.ui  dialog_replace.ui  dialog_savedfiles.ui  dialog_symbols.ui  dialog_xp_getdir.ui  mainwindow.ui
install/: Diamond.ci
install_files/: sync_files.bat
install_files/dictionary/: pt.aff
install_files/help/: build-diamond.html  build.html  build.js  copperspice.html  custom.css  features.html  index.html  install-binaries.html  install-source.html  install.html  license.html  menu-document.html  menu-edit.html  menu-file.html  menu-help.html  menu-search.html  menu-settings.html  menu-tools.html  menu-view.html  menu-window.html  menus.html  menus.js  navtree.js  navtreeindex0.js  pages.html  release.html  require-mac.html  require-win.html  require-x11.html  search-config.php  search.php  todo.html
install_files/help/search/: search.idx
install_files/syntax/: syn_js.json  syn_none.json  syn_pl.json
install_win/: Diamond.ci
menu/: diamond
resources/: EDT-Help.html  Info.plist  diamond.icns
source_extra/: diamond_doc.tar.bz2  sync_files.bat
source_extra/dictionary/: pt.dic  pt_BR.aff  userDict.txt
source_extra/help/: build-diamond.html  build-mac.html  build-win.html  build-x11.html  build.html  build.js  copperspice.html  doxy_custom.css  doxy_style.css  doxygen_custom.css  doxypress.css  faq.html  features.html  how_to.html  index.html  install-binaries.html  install-source.html  install.html  install.js  license.html  menu-document.html  menu-edit.html  menu-file.html  menu-help.html  menu-search.html  menu-settings.html  menu-tools.html  menu-view.html  menu-window.html  menus.html  menus.js  navtree.css  navtree.js  navtreedata.js  navtreeindex0.js  pages.html  release.html  require-mac.html  require-win.html  require-x11.html  (+3 more)
source_extra/help/search/: all_0.html  all_0.js  all_1.html  all_1.js  all_10.html  all_10.js  all_11.html  all_12.html  all_12.js  all_13.html  all_2.html  all_3.html  all_3.js  all_4.html  all_5.html  all_5.js  all_6.html  all_6.js  all_7.html  all_7.js  all_8.html  all_9.html  all_diamond.html  all_diamond.js  pages_0.html  pages_0.js  pages_1.html  pages_10.html  pages_11.html  pages_11.js  pages_12.html  pages_13.html  pages_2.html  pages_2.js  pages_3.html  pages_4.html  pages_4.js  pages_5.html  pages_5.js  pages_6.html  (+9 more)
source_extra/syntax/: syn_clipper.json  syn_cmake.json  syn_cpp.json  syn_css.json  syn_dox.json  syn_doxy.json  syn_errlog.json  syn_html.json  syn_java.json  syn_js.json  syn_make.json  syn_none.json  syn_nsi.json  syn_php.json  syn_pl.json  syn_py.json  syn_sh.json  syn_txt.json  syn_xml.json
src/: CMakeLists.txt  about.cpp  about.h  advfind_busy.cpp  advfind_busy.h  advfindstruct.cpp  advfindstruct.h  dialog_advfind.cpp  dialog_advfind.h  dialog_buffer.cpp  dialog_buffer.h  dialog_busy.cpp  dialog_busy.h  dialog_colors.cpp  dialog_colors.h  dialog_config.cpp  dialog_config.h  dialog_edt_help.cpp  dialog_edt_help.h  dialog_edt_prompt.cpp  dialog_edt_prompt.h  dialog_find.cpp  dialog_find.h  dialog_fonts.cpp  dialog_fonts.h  dialog_getline.cpp  dialog_getline.h  dialog_macro.cpp  dialog_macro.h  dialog_open.cpp  dialog_open.h  dialog_options.cpp  dialog_options.h  dialog_preset.cpp  dialog_preset.h  dialog_print_opt.cpp  dialog_print_opt.h  dialog_replace.cpp  dialog_replace.h  dialog_savedfiles.cpp  (+54 more)
syntax/: css.txt  syn_clipper.json  syn_clipper.txt  syn_cpp.json  syn_cpp.txt  syn_css.json  syn_dox.json  syn_dox.txt  syn_html.json  syn_java.json  syn_java.txt  syn_js.json  syn_make.json  syn_make.txt  syn_nsi.json  syn_php.json  syn_pl.json  syn_py.json  syn_sh.json  syn_txt.json
test-files/: numeric-constants.cpp
